# crowdsell

./: .editorconfig  .env  .env.admin.sh.secret  .env.dev.sh.secret  .env.launch.dev.sh.secret  .env.launch.prod.sh.secret  .env.prod.sh.secret  .env.template  .eslintrc.js  .gitignore  .huskyrc  Cargo.toml  Dockerfile  Dockerfile-go-anywhere  Dockerfile-postgraphile-node  Dockerfile-postgres-custom  README.md  Rocket.toml  base-migration.sql  curl-assembly.sh  curl.sh  database-start.yml  db-inspect.sh  design-doc.md  diesel-db-sync.sh  diesel.toml  docker-compose-launch.yml  docker-compose.yml  extracted_queries.json  index.html  k8s-manifest.yml  k8s-secret.yml  launch-schema-build.sh  nuxt.config.ts  package-lock.json  package.json  package.old.json  persist.js  pg-inspect.sh  pg-test.js  (+6 more)
.cargo/: config
.configs/: .env.launch.dev.sh  .env.launch.prod.sh  .env.launch.template  .env.template  .keys.db.yml.secret  .keys.docker.yml.secret  .keys.go-db.sh.secret  .keys.go-db.txt.secret  .keys.go.sh.secret  k8s-cluster.yml.secret  k8s-manifest.yml
client/: App.vue  Home.vue  Login.vue  api.js  apollo.js  app-main.js  auth.js  config.js  constants.js  experiments.js  launchEmailMixin.js  main.js  nuxt.config.ts  router.js  utils.js  vuex.js  vuexUtils.js
client-build/: build.js  dotenv-loader.js  utils.js  vue-loader.conf.js  webpack.base.conf.js  webpack.dev.conf.js  webpack.prod.conf.js
client-config/: index.js
client-old/: App.vue  launchEmailMixin.js  router.js  utils.js
data-schema/: fixtures.sql  old.sql  person.sql  project.sql  setup.sql
launch/: Dockerfile-crowdsell-go  Gopkg.toml  build-Dockerfile  main.go  main_test.go  nuxt.config.ts  schema.sql  tsconfig.json
postgraphile/: auth.js  build.sh  environment.js  server.js  test-run.sh
public/: index.html  manifest.json
server-copy/: main.go
(+134 files in other folders)
