[package]
name = "crowd-sell"
version = "0.1.0"
authors = ["blainehansen <faichenshing@gmail.com>"]

[[bin]]
name = "main"
path = "server/main.rs"

[dependencies]
rocket = "0.3.8"
rocket_codegen = "0.3.8"
rocket_contrib = "0.3.8"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
diesel = { version = "1.2.0", features = ["postgres", "r2d2"] }
pq = "1.2.1"
dotenv_codegen = "0.11.0"

# https://github.com/diesel-rs/diesel/issues/321
