[package]
name = "crowd-sell"
version = "0.1.0"
authors = ["blainehansen <faichenshing@gmail.com>"]

[[bin]]
name = "main"
path = "server/main.rs"

[dependencies]
time = "0.1"
rust-argon2 = "0.3"
openssl = "0.10"
base64 = "0.9"
rand = "0.4"

rocket = "0.3"
rocket_codegen = "0.3"
rocket_contrib = "0.3"
rocket_cors = { version = "0.2", default-features = false }

rusoto_core = "0.32"
rusoto_s3 = "0.32"
rusoto_credential = "0.11"

log = "0.4"
yansi = "0.4"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
diesel = { version = "1.3", features = ["postgres", "r2d2"] }
pq = "1.2"
dotenv_codegen = "0.11"

lazy_static = "1"

# https://github.com/diesel-rs/diesel/issues/321
